AGAIN FIXED BUTTON

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
         <div class="email">
         <input type="email" placeholder="Email Address" id="input-email">
-        <button id="submit" aria-label="submit"><i class="fa-solid fa-greater-than fa-lg" style="color:white;"></i></button>
+        <button id="submit" aria-label="submit" title="submit"><i class="fa-solid fa-greater-than fa-lg" style="color:white;"></i></button>
       </div>
       <p id="error">Please provide a valid email</p>
         
